30-sg-rules/main.tf
resource "aws_security_group_rule" "backend_alb_bastion" {
  type = "ingress"
  security_group_id = local.backend_alb_sg_id # frontend SG ID
  source_security_group_id =  local.bastion_sg_id # front-end-ALB sg id
  from_port         = 80
  protocol       = "tcp"
  to_port           = 80
}

resource "aws_security_group_rule" "bastion_laptop" {
  type = "ingress"
  security_group_id = local.bastion_sg_id
  cidr_blocks = ["0.0.0.0/0"]
  from_port         = 22
  protocol       = "tcp"
  to_port           = 22
}

resource "aws_security_group_rule" "mongodb_bastion" {
  type = "ingress"
  security_group_id = local.mongodb_sg_id
   source_security_group_id = local.bastion_sg_id
  from_port         = 22
  protocol       = "tcp"
  to_port           = 22
}

resource "aws_security_group_rule" "redis_bastion" {
  type = "ingress"
  security_group_id = local.redis_sg_id
   source_security_group_id = local.bastion_sg_id
  from_port         = 22
  protocol       = "tcp"
  to_port           = 22
}

resource "aws_security_group_rule" "rabbitmq_bastion" {
  type = "ingress"
  security_group_id = local.rabbitmq_sg_id
   source_security_group_id = local.bastion_sg_id
  from_port         = 22
  protocol       = "tcp"
  to_port           = 22
}

resource "aws_security_group_rule" "mysql_bastion" {
  type = "ingress"
  security_group_id = local.mysql_sg_id
   source_security_group_id = local.bastion_sg_id
  from_port         = 22
  protocol       = "tcp"
  to_port           = 22
}

resource "aws_security_group_rule" "catalogue_bastion" {
  type = "ingress"
  security_group_id = local.catalogue_sg_id
   source_security_group_id = local.bastion_sg_id
  from_port         = 22
  protocol       = "tcp"
  to_port           = 22
}

# catalogue connecting to mongodb
resource "aws_security_group_rule" "mongodb_catalogue" {
  type = "ingress"
  security_group_id = local.mongodb_sg_id
   source_security_group_id = local.catalogue_sg_id
  from_port         = 27017
  protocol       = "tcp"
  to_port           = 27017
}

resource "aws_security_group_rule" "catalogue_backend_alb" {
  type = "ingress"
  security_group_id = local.catalogue_sg_id
   source_security_group_id = local.backend_alb_sg_id
  from_port         = 8080
  protocol       = "tcp"
  to_port           = 8080
}

# frontend shhould accept connections from public
resource "aws_security_group_rule" "frontend_alb_public" {
  type              = "ingress"
  security_group_id = local.frontend_alb_sg_id
  cidr_blocks = ["0.0.0.0/0"]
  from_port         = 443
  protocol          = "tcp"
  to_port           = 443
}
